--- a/publisher/Makefile
+++ b/publisher/Makefile
@@ -15,7 +15,7 @@ BINARY_DEST_DIR = image/bin
 
 build: check-docker
 	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 godep go build -a -installsuffix cgo -ldflags '-s' -o $(BINARY_DEST_DIR)/publisher github.com/deis/deis/publisher || exit 1
-	$(call check-static-binary,$(BINARY_DEST_DIR)/publisher)
+	@$(call check-static-binary,$(BINARY_DEST_DIR)/publisher)
 	docker build -t $(RELEASE_IMAGE) image
 
 clean: check-docker check-registry
